Fixed margin for the project view: buttons were cut off

--- a/style.css
+++ b/style.css
@@ -1094,7 +1094,7 @@
 	text-transform: uppercase;
 	font-weight: 600;
 	font-size: 20px;
-	margin: 5px 0 15px;
+	margin: -75px 0 15px;
 	position: relative;
 	top: -20px;
 	-webkit-transition:all 1s ease;
